--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,3 @@
-/* Custom Styles */
-
-/* Ensure readability */
-/* Clear naming of classes */
-/* No code duplication */
-/* Use of external stylesheet (not inline) */
-
-/* Responsive Behavior */
-/* Is responsive */
-/* At least 3 columns with Bootstrap breakpoint classes */
-/* Header or heading */
-/* Folders or list */
-
-/* Ensure Bootstrap components are used */
-/* At least 2 Bootstrap components */
-
-/* Additional Styling */
-
 /* Body Styles */
 body {
   background-color: #f8f9fa;
@@ -39,42 +21,40 @@ body {
   color: #f8f9fa;
 }
 
-/* Sidebar Styles */
-.card {
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+/* Search Bar Styles */
+.card-header {
+  background-color: #007bff;
+  color: #003cff;
+  font-weight: bold;
+  text-align: center;
+  font-size: 18px;
 }
 
-.card-title {
-  color: #007bff;
-  text-align: center; /* Center aligning card titles */
-}
-
+/* Email Previews Styles */
 .list-group-item {
   cursor: pointer;
+  border-color: transparent;
 }
 
 .list-group-item:hover {
   background-color: #f8f9fa;
 }
 
-/* Email Previews Styles */
 .list-group-item.active {
   background-color: #007bff;
   border-color: #007bff;
-}
-
-.list-group-item.active:hover {
-  background-color: #007bff;
+  color: #fff;
 }
 
 /* Email Detail Styles */
 .card-subtitle {
   color: #007bff;
-  text-align: center; /* Center aligning card subtitles */
+  text-align: center;
 }
 
-.form-control {
-  resize: none;
+.btn-search {
+  background-color: #007bff; /* Default button color */
+  color: #fff; /* Text color */
 }
 
 .btn-primary {
@@ -84,23 +64,18 @@ body {
 
 .btn-primary:hover {
   background-color: #0056b3;
-  border-color: #0056b3;
 }
 
-.btn-success {
-  background-color: #28a745;
-  border-color: #28a745;
+.btn-secondary {
+  background-color: #6c757d;
+  border-color: #6c757d;
 }
 
-.btn-success:hover {
-  background-color: #218838;
-  border-color: #218838;
+.btn-secondary:hover {
+  background-color: #5a6268;
 }
 
-/* Search Bar Styles */
-.card-header {
-  background-color: #007bff;
-  color: #007bff;
-  font-weight: bold; /* Added font weight */
-  text-align: center; /* Center aligning card headers */
+.form-group{
+  text-align: center;
+  color: blue;
 }
