--- a/styles.css
+++ b/styles.css
@@ -82,3 +82,11 @@ body {
   text-align: center;
   color: blue;
 }
+
+.folder{
+  background-color: #D2B48C;
+}
+
+.inbox{
+  background-color: blue;
+}
